<resources>
    <string name="app_name">Geron Player</string>
    <string name="title_activity_artist_list">ArtistListActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unknown_artist">Unknown name</string>
    <string name="album_count">albums:</string>
    <string name="song_count">songs:</string>
    <string name="action_search">Search</string>
    <string name="load_error">Unable to load song</string>
    <string name="user_preset">Custom</string>
    <string name="virtualizer">Virtualizer</string>
    <string name="bass_boost">Bass Boost</string>
    <string name="equalizer">Equalizer</string>
    <string name="ringtone_set">Ringtone is set</string>
    <string name="unable_to_delete">Unable to delete while shuffle mode is ON</string>
    <string name="unable_to_move">Unable to move while shuffle mode is ON</string>
    <string name="action_accept">Accept</string>
    <string name="create_playlist">Create new playlist</string>
    <string name="action_ok">OK</string>
    <string name="playlist_name">Playlist name</string>
    <string name="please_wait">Please, wait…</string>
    <string name="new_name">New name</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="rename">Rename</string>
    <string name="choose_picture">Choose picture</string>
    <string name="play">Play</string>
    <string name="add_next">Play next</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="set_ringtone">Set as ringtone</string>
    <string name="delete">Delete</string>
    <string name="set_cover_art">Set cover art</string>
    <string name="edit">Edit</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="go_to_album">Go to album</string>
    <string name="artists">Artists</string>
    <string name="songs">Songs</string>
    <string name="genres">Genres</string>
    <string name="playlists">Playlists</string>
    <string name="folders">Folders</string>
    <string name="library">Library</string>
    <string name="timer">Timer</string>
    <string name="settings">Settings</string>
    <string name="navigation">Navigation</string>
    <string name="other">Other</string>
    <string name="queue">Current list</string>
    <string name="choose_theme">Choose theme</string>
    <string name="theme">Theme</string>
    <string name="license">License</string>
    <string name="buy">Buy</string>
    <string name="cancel">Cancel</string>
    <string name="trial_dialog_title">Trial period has expired</string>
    <string name="trial_dialog_message">Trial period of free version has expired. Please, buy unlimited version.</string>
    <string name="choose_number">Choose number of songs to play</string>
    <string name="lyrics">Lyrics</string>
    <string name="input_lyrics">Insert lyrics here</string>
    <string name="browse_web">Browse on the Web</string>
    <string name="no_lyrics">There is no lyrics</string>
    <string name="no_songs">There is no songs</string>
    <string name="no_data">No music found</string>
    <string name="delete_message">Are you sure?</string>
    <string name="track">Track</string>
    <string name="genre">Genre</string>
    <string name="path">Path</string>

    <string-array name="menu_items">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="single_song_menu">
        <item>@string/set_ringtone</item>
        <item>@string/go_to_artist</item>
        <item>@string/go_to_album</item>
        <item>@string/add_to_playlist</item>
    </string-array>

    <string-array name="song_menu_items">
        <item>@string/play</item>
        <item>@string/add_next</item>
        <item>@string/add_to_queue</item>
        <item>@string/add_to_playlist</item>
        <item>@string/set_ringtone</item>
        <item>@string/rename</item>
        <item>@string/delete</item>
    </string-array>

    <string-array name="category_menu_items">
        <item>@string/play</item>
        <item>@string/add_next</item>
        <item>@string/add_to_queue</item>
        <item>@string/add_to_playlist</item>
        <item>@string/rename</item>
        <item>@string/delete</item>
    </string-array>

    <string-array name="album_menu_items">
        <item>@string/play</item>
        <item>@string/add_next</item>
        <item>@string/add_to_queue</item>
        <item>@string/add_to_playlist</item>
        <item>@string/set_cover_art</item>
        <item>@string/rename</item>
        <item>@string/delete</item>
    </string-array>

    <string-array name="folder_menu_items">
        <item>@string/play</item>
        <item>@string/add_next</item>
        <item>@string/add_to_queue</item>
        <item>@string/add_to_playlist</item>
        <item>@string/delete</item>
    </string-array>

    <string-array name="playlist_menu_items">
        <item>@string/play</item>
        <item>@string/add_next</item>
        <item>@string/add_to_queue</item>
        <item>@string/add_to_playlist</item>
        <item>@string/edit</item>
        <item>@string/rename</item>
        <item>@string/delete</item>
    </string-array>

    <string-array name="categories">
        <item>@string/genres</item>
        <item>@string/artists</item>
        <item>@string/songs</item>
        <item>@string/folders</item>
        <item>@string/playlists</item>
    </string-array>

</resources>
