<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:title="@string/navigation">

            <menu>

                <item
                    android:id="@+id/library_item"
                    android:checked="false"
                    android:icon="@drawable/ic_action_save"
                    android:title="@string/library" />

                <item
                    android:id="@+id/queue_item"
                    android:checked="false"
                    android:icon="@drawable/ic_queue_music_white_24dp"
                    android:title="@string/queue" />

                <item
                    android:id="@+id/equalizer_item"
                    android:checked="false"
                    android:icon="@drawable/ic_equalizer_white_24dp"
                    android:title="@string/equalizer" />

                <item
                    android:id="@+id/action_timer"
                    android:checked="false"
                    android:icon="@drawable/ic_action_save"
                    android:title="@string/timer" />
            </menu>
        </item>
        <item android:title="@string/other">
            <menu>

                <item
                    android:id="@+id/settings_item"
                    android:checked="false"
                    android:icon="@drawable/ic_action_save"
                    android:title="@string/settings" />
            </menu>
        </item>

    </group>
</menu>