<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/list_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="56dp"
            android:paddingEnd="@dimen/list_padding"
            android:paddingLeft="@dimen/list_padding"
            android:paddingRight="@dimen/list_padding"
            android:paddingStart="@dimen/list_padding"
            android:paddingTop="@dimen/list_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/preset_name"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/grid_padding"
                    android:layout_marginRight="@dimen/grid_padding"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textSize="20dp" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/equalizer_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingTop="@dimen/list_padding"
                android:text="@string/equalizer"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="20dp" />

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/grid_padding"
                android:background="#ffa3a3a4" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/list_padding"
                android:text="@string/virtualizer"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="@dimen/grid_padding">

                <SeekBar
                    android:id="@+id/virtualize_seek_bar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/virtualize_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minEms="2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="@dimen/small_text_size"
                    tools:text="100%"
                    android:gravity="end" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/list_padding"
                android:text="@string/bass_boost"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="@dimen/grid_padding">

                <SeekBar
                    android:id="@+id/bass_seek_bar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />


                <TextView
                    android:id="@+id/bass_boost_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minEms="2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="@dimen/small_text_size"
                    tools:text="50%"
                    android:gravity="end" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
